# leti-ai-mentor

./: .dockerignore  .env.example  .gitignore  CLAUDE_CODE_SPEC.md  Dockerfile  PROGRESS.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_mentor.py
deploy/: DEPLOY_ORACLE_CLOUD.md  lux-mentor.service
leti_math_mentor/: .env.example  __init__.py  bot.py  config.py  keyboards.py  middlewares.py  prompts.py  requirements.txt  taxonomy.py
leti_math_mentor/handlers/: __init__.py  practice.py  progress.py  question.py  start.py
leti_math_mentor/services/: __init__.py  claude.py  db.py  memory.py  ratelimit.py
src/application/: dto.py
src/application/use_cases/: __init__.py  explain_topic.py  get_my_stats.py  get_statistics.py  list_reviews.py  process_due_reviews.py  reexplain_topic.py  register_student.py  start_review.py  start_test.py  submit_answer.py
src/domain/: enums.py  exceptions.py
src/domain/entities/: __init__.py  conversation.py  review.py  statistics.py  student.py  test_session.py
src/domain/ports/: __init__.py  clock.py  repositories.py  services.py
src/domain/services/: __init__.py  spaced_repetition.py
src/infrastructure/: clock.py  container.py
src/infrastructure/config/: settings.py
src/infrastructure/llm/: __init__.py  analysis_service.py  anthropic_client.py  explanation_service.py  prompts.py  resilience.py  test_generation_service.py
tests/: test_mentor.py  test_spaced_repetition.py  test_student_profile_format.py  test_submit_answer.py  test_test_result_format.py  test_test_session.py
(+24 files in other folders)
