[project]
name = "lux-leti-ai-mentor"
version = "0.1.0"
description = "Leti maktabi AI matematika mentori — Telegram bot (Clean Architecture)"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13,<4.0",
    "anthropic>=0.40",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.6"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Domen sinflari "Test..." bilan boshlanadi — ularni test sinfi sifatida yig'maslik.
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
